# rust_blogging_project

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
templates/: index.html
